# pomofomo

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: api.ts  format.ts  icons.ts  main.ts  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icons.rs  app_tracking.rs  brand_icon.rs  commands.rs  engine.rs  history.rs  lib.rs  main.rs  models.rs  settings.rs  store.rs
website/: README.md
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/guides/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/support/: page.tsx
website/src/app/terms/: page.tsx
website/src/components/: Footer.tsx  Navbar.tsx  ThemeToggle.tsx  ui.tsx
website/src/lib/: site.ts
